src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.bg-wallpaper {
  background-image: url('./assets/bg.jpg');
}

.reset-calendar {
  background: none !important;
  border: none !important;
}

@layer components {
  .round-icon {
    @apply w-14 h-14 rounded-xl bg-black bg-opacity-5 mx-1 relative transform hover:shadow-lg hover:mx-5 hover:z-10 hover:bg-opacity-100 hover:bg-white hover:-translate-y-4 transition-all hover:scale-150 flex justify-center items-center duration-200 ease-in-out active:bg-gray-200 border border-gray-200 border-opacity-0 hover:border-opacity-50;
  }
  .round-icon--active::after {
    content: "·";
    @apply absolute text-black -bottom-2 text-2xl;
  }

  .window-draggable {
    @apply z-10 absolute active:z-30;
  }
  .window-draggable--active {
    @apply z-20;
  }

  .toolbar-popover {
    @apply bg-white bg-opacity-90 shadow rounded p-3 absolute;
  }
  .toolbar-fixover {
    @apply bg-gray-100 bg-opacity-90 shadow rounded p-3 fixed top-8 right-2;
  }
}

@layer utilities {
  .hidden-important {
    display: none !important;
  }
}

button:focus, textarea:focus, input:focus {
  outline: none !important;
}

.window-draggable__tool {
  min-width: 20vw;
  min-height: 300px;
}

